tests/ui/loops/loop-break-never-type-mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/loop-break-never-type-mismatch.rs:17:26
   |
LL | fn loop_break_break() -> i32 {
   |    ----------------      ^^^ expected `i32`, found `()`
   |    |
   |    implicitly returns `()` as its body has no tail or `return` expression

error[E0308]: mismatched types
  --> $DIR/loop-break-never-type-mismatch.rs:39:25
   |
LL | fn loop_break_void() -> i32 {
   |    ---------------      ^^^ expected `i32`, found `()`
   |    |
   |    implicitly returns `()` as its body has no tail or `return` expression

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
